 * Graphics:
   * New generic portraits for the Walking Corpse and Soulless
 * Language and i18n:
   * Updated translations: Galician, Scottish Gaelic
 * Multiplayer:
   * Era names no longer support formatting markup in the game setup screen.
 * Units:
   * Fixed the Shuja not having the default AMLA.
 * WML engine:
   * Added support for [object] duration=turn end
 * Miscellaneous and bug fixes:
   * Removed abandoned libana network API implementation.
   * Fixed bug#23201 Toggle icons display error in replay.
   * Added --wconsole switch to allocate a console on startup (Windows-only).
   * Added cwesnoth.cmd wrapper script to start Wesnoth with a console
     displaying stdout+stderr (Windows-only).
   * Updated mainline campaigns and multiplayer scenarios to use [filter] status=
     instead of [filter] [filter_wml] [status]

Version 1.13.0:
 * Security fixes:
   * Fixed arbitrary file read from WML/Lua API (CVE-2015-0844, bug #23440).
 * Add-ons client:
   * The Update All button is now displayed on all Add-on Manager views instead
     of just the Upgradable filter view, and enabled only when there is at
     least one add-on that may be upgraded.
 * Add-ons server:
   * Add-on metadata pattern blacklisting implemented.
   * Major internal refactoring done.
 * AI:
   * New Micro AI: Fast AI
   * Big Animals Micro AI: bug fix for units not attacking when [avoid_unit] is
     not set
   * Bottleneck Micro AI: bug fix for case when allied units are present
   * Coward Micro AI: new optional key attack_if_trapped=
   * Forest Animals Micro AI: bug fix for wander terrain lying on border hexes
   * Herding Micro AI: bug fix for dogs sometimes having moves left at end
   * Lurkers Micro AI: fix bug in wander terrain selection
   * Lurkers Micro AI: bug fix for attack error when lurker runs into ambush
   * Lurkers MAI: bug fix for attempting to attack petrified units
   * Messenger Escort Micro AI: new optional parameters [filter],