@@ -246,6 +246,7 @@ surface tile_surface(const surface &surf, int w, int h, bool optimize=true);
 
 surface adjust_surface_color(const surface &surf, int r, int g, int b, bool optimize=true);
 surface greyscale_image(const surface &surf, bool optimize=true);
+surface monochrome_image(const surface &surf, const int threshold, bool optimize=true);
 surface sepia_image(const surface &surf, bool optimize=true);
 surface negative_image(const surface &surf, bool optimize=true);
 surface alpha_to_greyscale(const surface & surf, bool optimize=true);
