@@ -12,6 +12,8 @@ Version 1.13.0+dev:
    * Fixed the Shuja not having the default AMLA.
  * WML engine:
    * Added support for [object] duration=turn end
+   * New image path functions:
+      * ~BW(): converts an image to black and white
  * Miscellaneous and bug fixes:
    * Removed abandoned libana network API implementation.
    * Fixed bug#23201 Toggle icons display error in replay.
